@startuml
class Tester {
- preguntas: Pregunta[]
}

abstract class Pregunta {
- enunciado: string
- opcionCorrecta: char
+ añadirOpcionCorrecta ( const char op )
+ {abstract} toString(): string;
}

class VerdaderoFalso {
+ toString(): string
}

class Abcd {
- opciones: string[]
+ añadirPregunta( const string pregunta )
+ toString(): string
}

class std::list_opciones <string>
class std::list_preguntas <Pregunta>


VerdaderoFalso --|> Pregunta
Abcd --|> Pregunta
Abcd .. std::list_opciones
Tester --* Pregunta
Tester .. std::list_preguntas

@enduml